1.29.3
------
- mpg123:
-- Fix regression that did _not_ enable --remote-err on -s anymore.
-- Fix typos in man page (thanks to Naglis Jonaitis).
-- Drop mixed-up value limits on remote control SEQ command. It is up to you
   if you want to distort your sound.
-- Add note about equalizer frequency bands to man page.
- build: add BUILD_PROGRAMS option to ports/cmake

1.29.2
------
- libmpg123: Fix non-live-decoder safeguard for mpg123_framebyframe_decode()
  (was a no-op in practice, bug 324).

1.29.1
------
- mpg123:
-- Keep default output encoding of s16 for raw and file outputs
   also with the new resampler. This reverts the unintentional change in
   1.26.0 of switching to f32 for forced output rate unless the NtoM
   resampler is selected. In any case, you should make sure to specify
   your desired --encoding if you depend on it.
-- Catch error in indexing (mpg123_scan() return value was ignored
   before, bug 322).
- mpg123-strip: Lift the resync limit, as it should be to clean up really
  dirty streams.
- mpg123-id3dump: Also lift resync limit for the same reasons.
- libout123: fix reporting of device property flags for buffer
- libmpg123: more safeguarding against attempts to decode if decoder
  setup failed and user ignored the returned error code (bug 322)

1.29.0
------
- build: added --enable-runtime-tables
- libmpg123:
-- Float deocder runtime table computation is back as option,
   based on suggestion and initial patch by Ethan Halsall for a smaller
   download size of the wasm decoder built from libmpg23. This only
   trims the size of the binary on disk (network), for runtime
   overhead and a bit of uneasyness about concurrency during table
   computation, which happens implicitly on handle initialization,
   only guarded by an integer flag. This does _not_ revive
   mpg123_init().
-- The ID3v2 UTF-16 BOM check is now a straight-on loop and not a
   recursive function.

1.28.2
------
- libout123