@@ -1,5 +1,7 @@
 1.29.3
 ------
+- libmpg123: Catch more NULL pointer arguments in LFS wrappers
+  (most prominently: mpg123_feedseek(), bug 328).
 - mpg123:
 -- Fix regression that did _not_ enable --remote-err on -s anymore.
 -- Fix typos in man page (thanks to Naglis Jonaitis).
